# iland-backend

./: .env.example  .gitignore  README.md  package.json  tsconfig.json
moderation/: test-moderation.ts
scripts/: check-phase10-cleanliness.mjs  check-phase9-readiness.mjs  generate-submit-tally-proof.ts  generate-zkp-fixtures.ts  oidc-clients.ts  oidc-signing-keys.ts  overnight.sh  phase7-devnet-acceptance.mjs  pin-groth16-artifacts.mjs  prepare-zkp-prover-artifacts.mjs  print-zkp-artifact-env.mjs  publish-credential-roots.ts  replace-example-polls-with-production-zkp.ts  run-phase9-regression-suite.mjs  run-zkp-tally-worker.ts  verify-public-audit.mjs
scripts/human-ceremony/: .gitignore
solana/: Anchor.toml  Cargo.toml  README.md
solana/programs/civicos-audit/: Cargo.toml
solana/programs/civicos-audit/src/: lib.rs
src/: server.ts
src/auth/: appAttestation.test.ts  appAttestation.ts  challengePayload.ts  credentialSignature.test.ts  credentialSignature.ts  policy.ts  requireViewer.test.ts  requireViewer.ts  tokens.ts
src/config/: ballotCustodyDefaults.ts  env.test.ts  env.ts  solanaAuditDefaults.ts  zkpGroth16ArtifactDefaults.ts
src/db/: supabaseClient.ts
src/middleware/: errorHandler.ts  json.ts  requestLogger.ts
src/repositories/: accountDeletionRepository.ts  adminModerationRepository.ts  (+35 more)
sso-clients/: admin-dashboard-web.json  codeiland-web.json
supabase/: README.md  config.toml
zkp/: PHASE9_PRE_CEREMONY_FREEZE.md  PHASE9_REGRESSION_EVIDENCE.json  PHASE9_REGRESSION_EVIDENCE.template.json  groth16-vote-artifact-manifest.template.json
(+232 files in other folders)
