[package]
name = "civicos-audit"
version = "0.1.0"
description = "CivicOS poll audit root anchoring program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "civicos_audit"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
